# howitt

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  howitt-web-api.Dockerfile  howitt-web.dockerfile  howitt-worker.Dockerfile
.sqlx/: query-075365e0c1286cfadc2e814dbdca0fe7f7bf2874eca35079e72f687416273ac6.json  query-0b0d3b767438d80153ce0cf0a25efd704402be195f9a3680326d002f59e661e1.json  (+108 more)
cdk/: cdk.context.json  package-lock.json  package.json
csaps/: Cargo.toml
csaps/src/: lib.rs  ndarrayext.rs  ndg.rs  sprsext.rs  traits.rs  umv.rs  validate.rs
csaps/src/ndg/: evaluate.rs  make.rs  validate.rs
csaps/src/umv/: evaluate.rs  make.rs  validate.rs
csaps/tests/: umv_make.rs
howitt/: Cargo.toml
howitt-cli/: Cargo.toml
howitt-cli/src/: description.rs  dirs.rs  dynamodb.rs  json.rs  main.rs  postgres.rs  rwgps.rs
howitt-cli/src/commands/: media.rs  mod.rs  once_off.rs  poi.rs  ride.rs  route.rs  rwgps.rs  trip.rs  user.rs
howitt-cli/src/commands/route/: mod.rs
howitt-clients/: Cargo.toml
howitt-clients/src/: lib.rs
howitt-dynamo/: Cargo.toml
howitt-dynamo/src/: lib.rs
howitt-fs/: Cargo.toml
howitt-fs/src/: dirs.rs  lib.rs  rwgps.rs
howitt-graphql/: Cargo.toml
howitt-graphql/src/: context.rs  credentials.rs  lib.rs  roles.rs
howitt-hs/: CHANGELOG.md  LICENSE  howitt-hs.cabal
howitt-hs/app/: Main.hs
howitt-postgresql/: Cargo.toml  refinery_local.toml
howitt-postgresql/.sqlx/: query-043de4eebf589b993b3876bbe009dcfdd6d5915ffb36a63625d99ef0caf255d3.json  query-240a7fbb65b504d472f809f00e0486f9c3041f460ee385bec75c463131e5322c.json  query-3d5a52e8e23fd5d1371670cfec1e564745dc978f661038731f9dc5584e5bb0b2.json  query-4793831c7540968d0d335635d3d7572a2584ee65d94c1d455e29dfd786b546ef.json  query-570fa34281316803c4757735244e44c3b755ad3f416e77021c83bfee401a3f40.json  query-7609165d94c8f1bea9d535b9b7ad727fd06592973d7f83017292d41acb203be6.json  query-76605df6b4ab7b18a07338b70e9113ef0803dd66f926ca255b53103b52b2cf9d.json  query-961abdd4b7134173b10ba7eb7e76d21976b1013835683e96ab775b800bc71878.json  query-bd204eebdee49a769a63189b83695232c5e64d2175a6e184b3428e3b4a583bcb.json  query-bda5f4056307eb013d425fc26e4d36218aa822475ab054b74ad6e9b742113d2a.json  query-eafcf56a2a9812bd11701a16fc5ce47ec8ff9701b986d94bd6f6e9f3de978ca5.json
howitt-postgresql/migrations/: V0002__rides_and_pois.sql  V0003__routes_is_starred.sql  V0004__users.sql  V0005__rides_user_fk.sql  V0007__rides_user_idx.sql  V0008__rides_points_split.sql  V0009__trips.sql  V0012__media.sql  V0015__media_points_and_captured_at.sql
howitt-postgresql/src/: lib.rs
howitt-postgresql/src/repos/: media_repo.rs  mod.rs  poi_repo.rs  ride_points_repo.rs  ride_repo.rs  route_repo.rs  trip_repo.rs  user_repo.rs
howitt-web/: Cargo.toml  Dockerfile
howitt-web-lambda/: Cargo.toml
howitt-web-lambda/src/: main.rs
howitt-web/src/: app_state.rs  auth.rs  main.rs  rejections.rs
howitt-web/src/extractors/: login.rs
howitt-web/src/graphql/: context.rs  credentials.rs  mod.rs  roles.rs
howitt-web/src/graphql/loaders/: mod.rs
howitt-web/src/graphql/schema/: cue.rs  geo.rs  mod.rs  mutation.rs  photo.rs  point_of_interest.rs  query.rs  ride.rs  route.rs  trip.rs  user.rs  viewer.rs
howitt-web/src/graphql/schema/interfaces/: elevation_data.rs  elevation_path.rs  media_target.rs  mod.rs
howitt-web/src/graphql/schema/objects/: external_ref.rs  media.rs  mod.rs  photo.rs  point_of_interest.rs  query.rs  ride.rs  route.rs  trip.rs  user.rs
howitt-web/src/graphql/schema/scalars/: iso_date.rs  mod.rs  model_id.rs
howitt-web/src/handlers/: graphql.rs  upload.rs
howitt-worker/: Cargo.toml
howitt-worker/src/: main.rs
howitt-worker/src/handlers/: media.rs  mod.rs
howitt/src/: checkpoint.rs  config.rs  gpx_ext.rs  lib.rs  model.rs  nearby.rs  point.rs  repo.rs  repos.rs  route.rs  segment.rs  serde_ext.rs  trip.rs  ulid_ext.rs
howitt/src/ext/: futures.rs  iter.rs  mod.rs  serde.rs  ulid.rs
howitt/src/jobs/: mod.rs
howitt/src/models/: cardinal_direction.rs  checkpoint.rs  config.rs  cuesheet.rs  external_ref.rs  maybe_pair.rs  media.rs  mod.rs  photo.rs  point.rs  point_of_interest.rs  ride.rs  route.rs  route_description.rs  segment.rs  segment_summary.rs  slope_end.rs  tag.rs  terminus.rs  trip.rs  user.rs
howitt/src/models/point/: closest_point.rs  delta.rs  delta2.rs  elevation_point.rs  mod.rs  point.rs  point_chunk.rs  point_delta.rs  progress.rs  temporal_elevation_point.rs
howitt/src/models/point/snapshots/: howitt__models__point__delta__tests__elevation_gain_loss_delta.snap  howitt__models__point__delta__tests__moving_delta_with_speed.snap  howitt__models__point__delta__tests__speed_delta.snap  howitt__models__point__delta__tests__temporal_deltas.snap  howitt__models__point__progress__tests__distance_elevation_progress.snap  howitt__models__point__progress__tests__temporal_distance_elevation_progress.snap
howitt/src/models/snapshots/: howitt__models__segment_summary__tests__to_termini_works.snap  howitt__models__terminus__tests__to_termini_works.snap
howitt/src/services/: detect_segments.rs  generate_cuesheet.rs  lerp.rs  mod.rs  nearby.rs  num.rs  rwgps.rs  simplify_points.rs  smoothing.rs  summarize_segment.rs
howitt/src/services/fetchers/: cache.rs  mod.rs  simplified_ride_points.rs  simplified_route_points.rs
howitt/src/services/media/: crop.rs  keys.rs  mod.rs
howitt/src/services/snapshots/: howitt__services__summarize_segment__tests__it_succeeds_for_two_points.snap
howitt/src/services/sync/: mod.rs  photo.rs  rwgps.rs
howitt/src/services/user/: auth.rs  mod.rs  password.rs
rwgps/: Cargo.toml
rwgps-types/: Cargo.toml
rwgps-types/src/: client.rs  lib.rs
rwgps/src/: config.rs  credentials.rs  lib.rs  types.rs
src/lib/howitt-clients/: Cargo.toml
src/lib/howitt-clients/src/: lib.rs
src/lib/howitt-fs/: Cargo.toml
src/lib/howitt-fs/src/: dirs.rs  rwgps.rs
src/lib/howitt-jobs/: Cargo.toml
src/lib/howitt-jobs/src/: storage.rs
src/lib/rwgps/: Cargo.toml
src/lib/rwgps/docs/: authentication.md  webhooks.md
src/lib/rwgps/src/: lib.rs  reqwest_ext.rs
(+307 files in other folders)
