[workspace]

members = [
    "howitt",
    "howitt_derive",
    "howitt-cli",
    "howitt-dynamo",
    "howitt-fs",
    "howitt-graphql",
    "howitt-postgresql",
    "howitt-web",
    "howitt-web-lambda",
    "howitt-worker-lambda",
    "howitt-clients",
    "howitt-client-types",
    "rwgps",
    "rwgps-types",
    "gtfs",
    "csaps",
]

resolver = "2"
