[package]
name = "csaps"
version = "0.3.0"
authors = ["Eugene Prilepin <esp.home@gmail.com>"]

description = "Cubic spline approximation (smoothing)"
keywords = ["spline", "interpolation", "approximation", "csaps", "smoothing"]
categories = ["science"]

homepage = "https://github.com/espdev/csaps-rs"
repository = "https://github.com/espdev/csaps-rs"
documentation = "https://docs.rs/csaps"
readme = "README.md"
license = "MIT"

edition = "2021"


[badges]
travis-ci = { repository = "espdev/csaps-rs", branch = "master" }
coveralls = { repository = "espdev/csaps-rs", branch = "master", service = "github" }


[dependencies]
num-traits = "*"
ndarray = "0.13.0"
sprs = "0.7.1"
sprs-ldl = "0.5.0"
almost = "*"
itertools = "*"
thiserror = "*"

[dev-dependencies]
approx = "0.3.2"
ndarray = { version = "0.13", features = ["approx"] }
