[package]
name = "howitt-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
howitt = { path = "../howitt" }
howitt-fs = { path = "../howitt-fs" }
howitt-dynamo = { path = "../howitt-dynamo" }
anyhow = "*"
rayon = "*"
rwgps = { path = "../rwgps" }
rwgps_types = { path = "../rwgps-types" }
serde = { version = "1", features = ["derive"] }
toml = "*"
serde_json = "*"
inquire = "*"
lazy_static = "*"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
gpx = "*"
itertools = "*"
prettytable-rs = "*"
ulid = "*"
geo = "*"
