[package]
name = "howitt_clients"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
howitt_client_types = { path = "../howitt-client-types" }
reqwest = "*"
derive_more = { version = "1", features = ["full"] }
async-trait = "*"
url = "*"
aws-config = "1.5"
aws-sdk-s3 = "1.67"
thiserror = "*"
bytes = "*"
