[package]
name = "howitt-dynamo"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
howitt = { path = "../howitt" }
aws-sdk-dynamodb = "0.24.0"
aws-config = "0.54.1"
derive_more = "*"
anyhow = "*"
serde = "1"
uuid = "*"
geo = "*"
maplit = "*"
futures = "*"
async-trait = "*"
