[package]
name = "howitt-dynamo"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
async-trait = "*"
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
derive_more = "*"
futures = "*"
geo = "*"
howitt = { path = "../howitt" }
serde = "1"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_24"] }
uuid = "*"
tokio = "*"
itertools = "*"
