[package]
name = "howitt-graphql"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "5", features = ["uuid"] }
howitt = { path = "../howitt" }
rwgps_types = { path = "../rwgps-types" }
anyhow = "*"
gpx = "*"
geo = "*"
geojson = "*"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "*"
futures = "*"
ulid = "*"
serde = { version = "*", features = ["derive"] }
derive_more = "*"
polyline = "*"
