[package]
name = "howitt-graphql"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "5", features = ["uuid", "chrono", "url"] }
howitt = { path = "../howitt" }
geo = "*"
chrono = "*"
serde = { version = "*", features = ["derive"] }
derive_more = { version = "1", features = ["full"] }
itertools = "*"
thiserror = "*"
url = "*"

[dev-dependencies]
test-case = "3.1.0"
