[package]
name = "howitt-postgresql"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
async-trait = "*"
derive_more = { version = "0.99.17" }
futures = "*"
geo = "*"
howitt = { path = "../howitt" }
serde = "1"
serde_json = "*"
uuid = "*"
tokio = "*"
itertools = "*"
thiserror = "*"
chrono = "*"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "json",
    "chrono",
] }
