[package]
name = "howitt-postgresql"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "*"
derive_more = { version = "1", features = ["full"] }
howitt = { path = "../howitt" }
serde_json = "*"
uuid = "*"
itertools = "*"
thiserror = "*"
chrono = "*"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "json",
    "chrono",
] }
argon2 = "0.5.3"
