[package]
name = "howitt-web-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
async-graphql = { version = "5", features = ["uuid"] }
async-graphql-warp = "5"
chrono = "*"
geo = "*"
geojson = "*"
gpx = "*"
howitt = { path = "../howitt" }
howitt-graphql = { path = "../howitt-graphql" }
howitt-dynamo = { path = "../howitt-dynamo" }
http = "*"
rwgps = { path = "../rwgps" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
warp = "0.3"
warp_lambda = "0.1"