[package]
name = "howitt-web"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "*"
axum-macros = "*"
tower = "*"
tower-http = { version = "*", features = ["full"] }
async-graphql-axum = { git = "https://github.com/async-graphql/async-graphql.git" }
howitt-postgresql = { path = "../howitt-postgresql" }
anyhow = "*"
async-graphql = { git = "https://github.com/async-graphql/async-graphql.git", features = [
    "uuid",
    "chrono",
    "url",
] }
howitt = { path = "../howitt" }
howitt_clients = { path = "../howitt-clients" }
geo = "*"
chrono = "*"
serde = { version = "*", features = ["derive"] }
derive_more = { version = "1", features = ["full"] }
itertools = "*"
thiserror = "*"
url = "*"
serde_json = "*"
async-trait = "*"
http = "1.2.0"
tracing = "*"
tracing-subscriber = "*"


[dev-dependencies]
test-case = "3.1.0"
