[package]
name = "howitt-web"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "*", features = ["multipart"] }
axum-macros = "*"
tower = "*"
tower-http = { version = "*", features = ["full"] }
async-graphql-axum = { git = "https://github.com/async-graphql/async-graphql.git" }
howitt-postgresql = { path = "../howitt-postgresql" }
anyhow = "*"
async-graphql = { git = "https://github.com/async-graphql/async-graphql.git", features = [
    "uuid",
    "chrono",
    "url",
    "dataloader",
] }
howitt = { path = "../howitt" }
howitt_clients = { path = "../howitt-clients" }
exif = { path = "../exif" }
howitt_client_types = { path = "../howitt-client-types" }
geo = "*"
chrono = "*"
chrono-tz = "*"
serde = { version = "*", features = ["derive"] }
derive_more = { version = "1", features = ["full"] }
itertools = "*"
thiserror = "*"
url = "*"
serde_json = "*"
async-trait = "*"
http = "1.2.0"
tracing = "*"
tracing-subscriber = "*"
dotenv = "0.15.0"
axum_typed_multipart = { version = "*" }
uuid = "*"
infer = "0.16.0"
apalis = { version = "0.6", features = ["limit", "timeout"] }
apalis-redis = { version = "0.6" }
nom-exif = "*"


[dev-dependencies]
test-case = "3.1.0"
