[package]
name = "howitt-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
apalis = { version = "0.6", features = ["limit", "timeout"] }
apalis-redis = { version = "0.6" }
howitt = { path = "../howitt" }
howitt_clients = { path = "../howitt-clients" }
howitt_client_types = { path = "../howitt-client-types" }
howitt-postgresql = { path = "../howitt-postgresql" }
tokio = { version = "1", features = ["full"] }
tracing = "*"
tracing-subscriber = "0.3"
image = { version = "*", default-features = false, features = [
    "rayon",
    "jpeg",
    "webp",
] }
webp = "*"
libwebp-sys = "*"
thiserror = "*"
