[package]
name = "howitt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
gpx = { version = "*", features = ["use-serde"] }
geo = { version = "*", features = ["serde"] }
derive_more = "*"
chrono = "*"
kamadak-exif = "0.5.5"
fitparser = "0.5.1"
serde = { version = "1", features = ["derive"] }
gtfs = { path = "../gtfs" }
itertools = "*"
uuid = { version = "1", features = ["v4", "serde"] }