[package]
name = "howitt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
gpx = { version = "*", features = ["use-serde"] }
geo = { version = "*", features = ["serde"] }
derive_more = "*"
chrono = "*"
time = "*"
serde = { version = "1", features = ["derive"] }
itertools = "*"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "*"
async-trait = "*"
bincode = "*"
snap = "1"
ulid = { version = "1", features = ["serde"] }
md5 = "*"
rwgps_types = { path = "../rwgps-types" }
futures = "*"
ordered-float = "*"
toml = "*"
once_cell = "*"
tokio = { version = "*", features = ["sync"] }
either = { version = "*", features = ["serde"] }
num = "*"
url = { version = "*", features = ["serde"] }

[dev-dependencies]
insta = "*"
test-case = "3.1.0"
