[package]
name = "howitt"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
gpx = { version = "*", features = ["use-serde"] }
geo = { version = "*", features = ["serde"] }
derive_more = { version = "1", features = ["full"] }
chrono = "*"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
itertools = "*"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "*"
async-trait = "*"
bincode = "*"
ulid = { version = "1", features = ["serde"] }
md5 = "*"
howitt_derive = { path = "../howitt_derive" }
rwgps_types = { path = "../rwgps-types" }
howitt_client_types = { path = "../howitt-client-types" }
csaps = { path = "../csaps" }
futures = "*"
ordered-float = "*"
toml = "*"
once_cell = "*"
tokio = { version = "*", features = ["sync"] }
either = { version = "*", features = ["serde"] }
num = "*"
url = { version = "*", features = ["serde"] }
almost = "*"
bytes = "*"
argon2 = "0.5.3"
jsonwebtoken = { version = "9", default-features = false }

[dev-dependencies]
insta = { version = "*", features = ["toml"] }
test-case = "3.1.0"
