[package]
name = "rwgps_types"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde-aux = "*"
chrono = { version = "*", features = ["serde"] }
geo = "*"
gpx = "*"
serde_json = "*"
derive_more = "*"
async-trait = "*"
serde_with = { version = "*", features = ["chrono"] }
