[package]
name = "rwgps"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "*"
geo = "*"
gpx = "*"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "*"
serde_path_to_error = "0.1"
serde-aux = "*"
thiserror = "*"
tokio = { version = "1", features = ["full"] }
url = "*"
chrono = { version = "*", features = ["serde"] }
