[package]
name = "howitt-fs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
howitt = { path = "../howitt" }
walkdir = "2"
gtfs = { path = "../gtfs" }
rwgps_types = { path = "../rwgps-types" }
itertools = "*"
anyhow = "*"
toml = "*"
serde_json = "*"
lazy_static = "*"
dirs = "*"
project-root = "*"
shapefile = "*"
geo = "*"
chrono = "*"
gpx = "*"
