[package]
name = "howitt_jobs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
apalis-core = { version = "0.6" }
apalis = { version = "0.6", features = ["limit", "timeout"] }
apalis-redis = { version = "0.6" }
tokio = { version = "1", features = ["full"] }
thiserror = "*"
howitt = { path = "../howitt" }
