[package]
name = "howitt_jobs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
apalis-core = { git = "https://github.com/geofmureithi/apalis.git" }
apalis = { git = "https://github.com/geofmureithi/apalis.git", features = [
    "limit",
    "timeout",
] }
apalis-redis = { git = "https://github.com/geofmureithi/apalis.git" }
tokio = { version = "1", features = ["full"] }
thiserror = "*"
howitt = { path = "../howitt" }
