[package]
name = "rwgps"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "native-tls-vendored",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "*"
serde_path_to_error = "0.1"
thiserror = "*"
tokio = { version = "1", features = ["full"] }
url = "*"
rwgps_types = { path = "../rwgps-types" }
async-trait = "*"
